added epic stuff

--- a/src/main/resources/assets/programming-final/lang/en_us.json
+++ b/src/main/resources/assets/programming-final/lang/en_us.json
@@ -1,4 +1,7 @@
 {
   "item.programming-final.blue_apple": "Blue Apple",
-  "item.programming-final.prepared_endstone": "Prepared Endstone"
+  "item.programming-final.prepared_endstone": "Prepared Endstone",
+
+
+  "block.programming-final.moonstone": "Moonstone"
 }
